# deg-hacker

./: .gitignore  AGENTS.md  DIMENSIONS.md  README.md  challenge.py  convert_checkpoint.py  demo.py  denoiser.py  helpers.py  multi_particle_unet.py  multi_particle_unet_backup.py  multitask_model.py  one_particle.py  one_particle_medfilt.py  one_particle_unet.py  pyproject.toml  requirements.txt  segmenter.py  single_particle_medfilt.py  single_particle_unet.py  utils.py  visualize_multi_track.py
Hackathon/: test.txt
baseline/: __init__.py  single_particle_medfilt.py  single_particle_unet.py
demo/: README.md  __init__.py  generate_data.py  run.sh  run_classical.py  run_deeplearning.py  run_demo.py  train_model.py  visualize.py
inference/: challenge.py  demo.py  multi_particle_unet.py  multiple_challenge.py  single_challenge.py  visualize_training.py
kymo_tracker/models/: __init__.py  multitask.py
kymo_tracker/training/: README.md  __init__.py  multitask.py
kymo_tracker/utils/: analysis.py  device.py
metrics/: one_particle_unet.csv
src/: main.py
src/kymo_tracker/: __init__.py
src/kymo_tracker/classical/: __init__.py  pipeline.py
src/kymo_tracker/data/: __init__.py  multitask_dataset.py
src/kymo_tracker/deeplearning/: __init__.py  predict.py
src/kymo_tracker/deeplearning/inference/: __init__.py  demo.py  predict.py  visualize_training.py
src/kymo_tracker/deeplearning/inference/deeplearning/: __init__.py
src/kymo_tracker/deeplearning/models/: __init__.py  multitask.py
src/kymo_tracker/deeplearning/training/: README.md  __init__.py  config.py  multitask.py
src/kymo_tracker/inference/: __init__.py  demo.py  predict.py  visualize_training.py
src/kymo_tracker/training/: README.md
src/kymo_tracker/utils/: __init__.py  analysis.py  device.py  helpers.py  tracking.py  visualization.py
tests/: README.md  __init__.py  conftest.py  test_denoiser.py  test_integration.py  test_tracking.py  test_utils.py
train/: README.md  multitask_model.py
utils/: __init__.py  analysis.py  tracking.py
